WIP: Moved to create-react-app

--- a/TODO
+++ b/TODO
@@ -9,3 +9,4 @@ V. Сделать бамбузлинг через PWM
 9. Сделать nodejs-программу системным демоном
 10. Сделать автовыключение колёс если программа крашнулась
 11. Сделать индикатор батареи
+12. Выяснить, почему скапливается мусор в очереди команд
