--- a/TODO
+++ b/TODO
@@ -1,12 +1,15 @@
-1. Сделать однотиковый барьер между сменой направлений
-2. Уложить в коробку проводочки
+V. Сделать однотиковый барьер между сменой направлений
+V. Уложить в коробку проводочки
 3. Сделать зарядку через шнур
 V. Сделать бамбузлинг через PWM
-5. Сделать красивый фронтенд просмотра с управлением
-6. Сделать красивый фронтенд просмотра без управления
-7. Сделать красивый фронтенд формы логина
-8. Сделать безопасность входов для разных ролей
+V. Сделать красивый фронтенд просмотра с управлением
+V. Сделать красивый фронтенд просмотра без управления
+V. Сделать красивый фронтенд формы логина
+V. Сделать безопасность входов для разных ролей
 9. Сделать nodejs-программу системным демоном
 10. Сделать автовыключение колёс если программа крашнулась
 11. Сделать индикатор батареи
 12. Выяснить, почему скапливается мусор в очереди команд
+13. Подкрутить UX управления <- ТУТ
+ V. Понять почему стрим не запускается после подсоединения клиента
+ V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
