--- a/TODO
+++ b/TODO
@@ -7,9 +7,9 @@ V. Сделать красивый фронтенд просмотра без у
 V. Сделать красивый фронтенд формы логина
 V. Сделать безопасность входов для разных ролей
 9. Сделать nodejs-программу системным демоном
-10. Сделать автовыключение колёс если программа крашнулась
+10. Сделать автовыключение колёс если программа крашнулась ?
 11. Сделать индикатор батареи
-12. Выяснить, почему скапливается мусор в очереди команд
+12. Выяснить, почему скапливается мусор в очереди команд ?
 13. Подкрутить UX управления <- ТУТ
  V. Понять почему стрим не запускается после подсоединения клиента
  V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
