WIP: New trouble

--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ V. Сделать безопасность входов для разных ро
 10. Сделать автовыключение колёс если программа крашнулась ?
 11. Сделать индикатор батареи
 12. Выяснить, почему скапливается мусор в очереди команд ?
-13. Подкрутить UX управления <- ТУТ
+13. Подкрутить UX управления 
  V. Понять почему стрим не запускается после подсоединения клиента
  V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
+16. Почему сплиттер прерывает второе подключение? <- ТУТ
