WIP: Fixed the splitter bug

--- a/TODO
+++ b/TODO
@@ -7,10 +7,10 @@ V. Сделать красивый фронтенд просмотра без у
 V. Сделать красивый фронтенд формы логина
 V. Сделать безопасность входов для разных ролей
 9. Сделать nodejs-программу системным демоном
-10. Сделать автовыключение колёс если программа крашнулась ?
+ V. Сделать автовыключение колёс если программа крашнулась
 11. Сделать индикатор батареи
-12. Выяснить, почему скапливается мусор в очереди команд ?
-13. Подкрутить UX управления 
+ V. Выяснить, почему скапливается мусор в очереди команд ?
+13. Подкрутить UX управления <- ТУТ
  V. Понять почему стрим не запускается после подсоединения клиента
  V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
-16. Почему сплиттер прерывает второе подключение? <- ТУТ
+ V. Почему сплиттер прерывает второе подключение?
