WIP: Introduced a stop command

--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@ V. Сделать безопасность входов для разных ро
  V. Понять почему стрим не запускается после подсоединения клиента
  V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
  V. Почему сплиттер прерывает второе подключение?
+17. Причесать код
