WIP: Tuned a steering logic to be more precise

--- a/TODO
+++ b/TODO
@@ -10,8 +10,11 @@ V. Сделать безопасность входов для разных ро
  V. Сделать автовыключение колёс если программа крашнулась
 11. Сделать индикатор батареи
  V. Выяснить, почему скапливается мусор в очереди команд ?
-13. Подкрутить UX управления <- ТУТ
+ V. Подкрутить UX управления
  V. Понять почему стрим не запускается после подсоединения клиента
  V. Починить отвал tcp-стрима при выключении сервера (сделать реконнект)
  V. Почему сплиттер прерывает второе подключение?
 17. Причесать код
+18. Индикатор направления в виде картинки-диаграммы
+19. Индикатор текущих пользователей
+20. Переделать корпус
