WIP: Preparing for the deployment

--- a/TODO
+++ b/TODO
@@ -19,3 +19,10 @@ V. Сделать безопасность входов для разных ро
  V. Индикатор текущих пользователей
 20. Переделать корпус
 21. Дописать readme.md
+22. Задеплоить:
+    V сделать образ сервера
+    - запушить образ сервера
+    - настроить сварм на запуск этого образа с переменными
+    - сделать обновление этого образа на случай если что
+    - придумать как из CI дергать обновление образа
+    - закончить CI-цикл
