--- a/TODO
+++ b/TODO
@@ -26,3 +26,4 @@ V. Сделать безопасность входов для разных ро
     - сделать обновление этого образа на случай если что
     - придумать как из CI дергать обновление образа
     - закончить CI-цикл
+23. Очищать сокеты после провала подключения, а то они спамят в консоль
