WIP: A visible progress

--- a/TODO
+++ b/TODO
@@ -21,9 +21,9 @@ V. Сделать безопасность входов для разных ро
 21. Дописать readme.md
 22. Задеплоить:
     V сделать образ сервера
-    - запушить образ сервера
-    - настроить сварм на запуск этого образа с переменными
-    - сделать обновление этого образа на случай если что
-    - придумать как из CI дергать обновление образа
+    V запушить образ сервера
+    V настроить сварм на запуск этого образа с переменными
+    V сделать обновление этого образа на случай если что
+    V придумать как из CI дергать обновление образа
     - закончить CI-цикл
 23. Очищать сокеты после провала подключения, а то они спамят в консоль
