WIP: Todo progress

--- a/TODO
+++ b/TODO
@@ -19,11 +19,11 @@ V. Сделать безопасность входов для разных ро
  V. Индикатор текущих пользователей
 20. Переделать корпус
 21. Дописать readme.md
-22. Задеплоить:
+ V. Задеплоить:
     V сделать образ сервера
     V запушить образ сервера
     V настроить сварм на запуск этого образа с переменными
     V сделать обновление этого образа на случай если что
     V придумать как из CI дергать обновление образа
-    - закончить CI-цикл
+    V закончить CI-цикл
 23. Очищать сокеты после провала подключения, а то они спамят в консоль
