WIP: Style fixes & todos

--- a/TODO
+++ b/TODO
@@ -1,14 +1,14 @@
 V. Сделать однотиковый барьер между сменой направлений
 V. Уложить в коробку проводочки
-3. Сделать зарядку через шнур
+V. Сделать зарядку через шнур
 V. Сделать бамбузлинг через PWM
 V. Сделать красивый фронтенд просмотра с управлением
 V. Сделать красивый фронтенд просмотра без управления
 V. Сделать красивый фронтенд формы логина
 V. Сделать безопасность входов для разных ролей
-9. Сделать nodejs-программу системным демоном
+V. Сделать nodejs-программу системным демоном
  V. Сделать автовыключение колёс если программа крашнулась
-11. Сделать индикатор батареи
+ V. Сделать индикатор батареи
  V. Выяснить, почему скапливается мусор в очереди команд ?
  V. Подкрутить UX управления
  V. Понять почему стрим не запускается после подсоединения клиента
@@ -17,7 +17,7 @@ V. Сделать безопасность входов для разных ро
 17. Причесать код
  -. Индикатор направления в виде картинки-диаграммы
  V. Индикатор текущих пользователей
-20. Переделать корпус
+ V. Переделать корпус
 21. Дописать readme.md
  V. Задеплоить:
     V сделать образ сервера
